GPC/tests/examples/fail/constructArray2.gpc

GPRM::Kernel::Test a;

a[0] = GPRM::Kernel::Test::Test(); // a is not an array

int constructArray() {
    return 0;
}

